[package]
name = "paddleocr-json-rs"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A simple Rust wrapper for PaddleOCR-JSON."
homepage = "https://github.com/zhoushi1/paddleocr-json-rs"
repository = "https://github.com/zhoushi1/paddleocr-json-rs"
readme = "README.md"
categories = ["computer-vision", "external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { version = "0.22.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }


[lib]
doctest = false

[features]
bytes = ["dep:base64"]

[dev-dependencies]
paddleocr-json-rs = { path = ".", features = ["bytes"] }
